# Super-C-Runtime-Governed-by-Rust-

./: .gitignore  LICENSE  README.md
asm/: CMakeLists.txt
asm/aarch64/: simd_math.s
asm/include/: asm_ops.h
asm/x86_64/: memops.asm  simd_math.asm
cuda/: CMakeLists.txt
cuda/include/: cuda_kernels.h
cuda/src/kernels/: vector_ops.cu
cuda/src/memory/: gpu_memory.cu
docs/: ARCHITECTURE.md  HIP_CPU_SETUP.md
dsl/: Cargo.toml  README.md
dsl/docs/: BACKENDS.md  EXAMPLES.md  INSTALL.md  SYNTAX.md
dsl/examples/: batch_compute.sc  hello.sc  vector_math.sc
dsl/src/: ast.rs  codegen.rs  codegen_asm.rs  compute.rs  lexer.rs  lib.rs  main.rs  parser.rs
dsl/vscode-extension/superc-lang/: README.md  [Content_Types].xml  extension.js  extension.vsixmanifest  language-configuration.json  package.json  superc-lang-0.3.0.vsix
dsl/vscode-extension/superc-lang/snippets/: superc.json
dsl/vscode-extension/superc-lang/syntaxes/: superc.tmLanguage.json
hip/: CMakeLists.txt
hip/include/: hip_kernels.h
hip/src/kernels/: vector_ops.cpp
hip/src/runtime/: hip_runtime.cpp
native/: CMakeLists.txt
native/include/: gpu_unified.h  super_c.h
native/src/core/: runtime.c
native/src/dispatch/: dispatcher.c  gpu_unified.c
native/src/glue/: rust_glue.c
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/arena/: allocator.rs  mod.rs
rust/src/contracts/: mod.rs
rust/src/ffi/: cuda.rs  hip.rs  mod.rs  native.rs
rust/src/scheduler/: dispatch.rs  mod.rs  task.rs
